--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="refresh" content="0;URL=https://sprintbox.ru/s36878" />
+<meta http-equiv="refresh" content="0;URL=https://vk.cc/c6jVbm" />
 </head>
 </html>
